Updated frontpage, header and footer

--- a/src/css/_variables.sass
+++ b/src/css/_variables.sass
@@ -5,7 +5,7 @@
 
 // // Color system
 
-// $white:    #fff !default
+$white:    #fff !default
 // $gray-100: #f8f9fa !default
 // $gray-200: #e9ecef !default
 // $gray-300: #dee2e6 !default
@@ -15,7 +15,7 @@
 // $gray-700: #495057 !default
 // $gray-800: #343a40 !default
 // $gray-900: #212529 !default
-// $black:    #000 !default
+$black:    #292b2c
 
 // $grays: () !default
 // // stylelint-disable-next-line scss/dollar-variable-default
@@ -34,7 +34,7 @@
 //   $grays
 // )
 
-// $blue:    #007bff !default
+$blue:    #1e88ae
 // $indigo:  #6610f2 !default
 // $purple:  #6f42c1 !default
 // $pink:    #e83e8c !default
@@ -255,7 +255,7 @@
 // $caret-width:                 .3em !default
 
 // $transition-base:             all .2s ease-in-out !default
-// $transition-fade:             opacity .15s linear !default
+$transition-fade:             opacity .3s linear
 // $transition-collapse:         height .35s ease !default
 
 // $embed-responsive-aspect-ratios: () !default
@@ -719,7 +719,7 @@
 
 // // Navbar
 
-// $navbar-padding-y:                  $spacer / 2 !default
+// $navbar-padding-y:                  $spacer !default
 // $navbar-padding-x:                  $spacer !default
 
 // $navbar-nav-link-padding-x:         .5rem !default
@@ -1089,3 +1089,55 @@
 
 // $print-page-size:                   a3 !default
 // $print-body-min-width:              map-get($grid-breakpoints, "lg") !default
+
+
+// font Awesome fonts path
+$fa-font-path: '../fonts'
+
+// Headder overlay color
+$overlay-color: rgba($white, .7)
+
+// Max content width
+$content-max-width: 1530px
+
+// Facebook
+$facebook: rgba(62, 91, 153, 1)
+
+// Instagram
+$instagram: rgba(188, 42, 141, 1)
+
+// Twitter
+$twitter: rgba(29, 161, 242, 1)
+
+// Google plus
+$google-plus: rgba(219, 68, 55, 1)
+
+// Behance
+$behance: rgba(23, 105, 255, 1)
+
+// Linkedin
+$linkedin: rgba(29, 135, 189, 1)
+
+// Github
+$github: rgba(51, 51, 51, 1)
+
+// Pinterest color
+$pinterest: rgba(189, 8, 28, 1)
+
+// Reddit color
+$reddit: rgba(95, 153, 207, 1)
+
+// Mail
+$mail: rgba(68, 68, 68, 1)
+
+// Profiles array
+// $social-profiles: ('facebook': $facebook, 'instagram': $instagram, 'twitter': $twitter, 'google-plus': $google-plus, 'behance': $behance, 'linkedin': $linkedin, 'pinterest': $pinterest, 'reddit': $reddit, 'github': $github, 'mail': $mail)
+$social-profiles: ('facebook': $facebook, 'instagram': $instagram, 'twitter': $twitter, 'behance': $behance, 'linkedin': $linkedin, 'github': $github)
+
+// Menu toggle border
+$toggler-border: 2px solid $black
+
+// Box shadow
+$vox-shadow: 0 0 100px rgba(0, 0, 0, .3)
+
+$debug: #ff4500
