--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -5,4 +5,14 @@
 @import 'bootstrap'
 
 // Font Awesome
-@import '../../node_modules/font-awesome/scss/font-awesome'
+@import 'font-awesome'
+
+@import 'typography'
+@import 'keyframes'
+@import 'container'
+@import 'navbar'
+@import 'social'
+@import 'header'
+@import 'footer'
+
+@import 'frontpage'
