--- a/src/css/_variables.sass
+++ b/src/css/_variables.sass
@@ -1130,14 +1130,18 @@ $reddit: rgba(95, 153, 207, 1)
 // Mail
 $mail: rgba(68, 68, 68, 1)
 
+$whatsapp: rgba(0, 150, 136, 1)
+
 // Profiles array
-// $social-profiles: ('facebook': $facebook, 'instagram': $instagram, 'twitter': $twitter, 'google-plus': $google-plus, 'behance': $behance, 'linkedin': $linkedin, 'pinterest': $pinterest, 'reddit': $reddit, 'github': $github, 'mail': $mail)
-$social-profiles: ('facebook': $facebook, 'instagram': $instagram, 'twitter': $twitter, 'behance': $behance, 'linkedin': $linkedin, 'github': $github)
+$social-profiles: ('facebook': $facebook, 'instagram': $instagram, 'twitter': $twitter, 'google-plus': $google-plus, 'behance': $behance, 'linkedin': $linkedin, 'pinterest': $pinterest, 'reddit': $reddit, 'github': $github, 'mail': $mail, 'whatsapp': $whatsapp)
+// $social-profiles: ('facebook': $facebook, 'instagram': $instagram, 'twitter': $twitter, 'behance': $behance, 'linkedin': $linkedin, 'github': $github)
 
 // Menu toggle border
 $toggler-border: 2px solid $black
 
-// Box shadow
-$vox-shadow: 0 0 100px rgba(0, 0, 0, .3)
+// Chat message colors
+$chat-color-1: #badefc
+$chat-color-2: #43a6dd
+
 
 $debug: #ff4500
