--- a/src/css/_keyframes.sass
+++ b/src/css/_keyframes.sass
@@ -1,25 +1,37 @@
-@keyframes menu-animation
+@keyframes toggler-animation
     0%
-        width: 100%
+        width: 70%
 
     20%
-        width: 10%
+        width: 5%
 
     80%
-        width: 120%
+        width: 80%
 
     100%
-        width: 100%
-
-@keyframes menu-animation-short
-    0%
         width: 70%
+
+@keyframes toggler-animation-short
+    0%
+        width: 50%
 
     20%
-        width: 10%
+        width: 5%
 
     75%
-        width: 110%
+        width: 80%
 
     100%
-        width: 70%
+        width: 50%
+
+@keyframes menu-animation
+    0%
+        box-shadow: none
+        top: -500px
+
+    80%
+        top: 100px
+
+    100%
+        box-shadow: $box-shadow
+        top: 50px
