--- a/src/css/_navbar.sass
+++ b/src/css/_navbar.sass
@@ -5,13 +5,13 @@
 // Menu mobile toggler
 .navbar-toggler
     border: 0
-    height: 18px
+    height: 40px
     left: 30px
     opacity: .7
     position: fixed
     top: 30px
-    transition: opacity 500ms ease-in-out
-    width: 24px
+    transition: opacity 500ms ease-in-out, background-color 300ms ease-in-out
+    width: 40px
 
     .menu-item-1,
     .menu-item-2,
@@ -20,22 +20,23 @@
         display: block
         height: 3px
         left: 0
+        margin-left: 15%
         opacity: 1
         position: absolute
         top: 50%
         transform: rotate(0deg)
         transition: .25s ease-in-out
-        width: 100%
+        width: 70%
 
     .menu-item-1
-        top: 0
+        top: 9px
 
     .menu-item-2
         top: calc(50% - 1px)
 
     .menu-item-3
-        top: calc(100% - 2px)
-        width: 70%
+        top: calc(100% - 11px)
+        width: 50%
 
     &:focus
         outline: 0
@@ -44,27 +45,26 @@
         opacity: 1
 
         .menu-item-1
-            animation: menu-animation 600ms ease-in-out
+            animation: toggler-animation 600ms ease-in-out
 
         .menu-item-2
-            animation: menu-animation 600ms 100ms ease-in-out
+            animation: toggler-animation 600ms 100ms ease-in-out
 
         .menu-item-3
-            animation: menu-animation-short 600ms 200ms ease-in-out
+            animation: toggler-animation-short 600ms 200ms ease-in-out
 
     &.active
-        background-color: $blue
-        box-shadow: $box-shadow
-        height: 40px
+        background-color: $white
+        box-shadow: $box-shadow-lg
         opacity: 1
-        width: 40px
         z-index: 1000
 
         .menu-item-1,
         .menu-item-2,
         .menu-item-3
-            background-color: $white
+            margin: 0 15%
             top: calc(50% - 1px)
+            width: 70%
 
         .menu-item-1
             transform: rotate(45deg)
@@ -74,7 +74,6 @@
 
         .menu-item-3
             transform: rotate(-45deg)
-            width: 100%
 
         &:hover
             .menu-item-1,
@@ -133,8 +132,9 @@
             color: $black
 
 .navbar-nav-header
+    animation: menu-animation 600ms ease-in-out
     background-color: $white
-    box-shadow: $vox-shadow
+    box-shadow: $box-shadow-lg
     left: 50%
     position: absolute
     top: 50px
@@ -158,6 +158,7 @@
 
 @include media-breakpoint-up(md)
     .navbar-nav-header
+        animation: none
         background-color: transparent
         box-shadow: none
         display: inline
@@ -183,8 +184,8 @@
     margin-top: 2 * $spacer
 
     .navbar-nav
-        opacity: .7
         display: block
+        opacity: .7
 
         .nav-item
             width: 100%
