Updated contact page

--- a/src/css/_typography.sass
+++ b/src/css/_typography.sass
@@ -53,6 +53,7 @@ h6
 a
     @include transition
     color: $blue
+    font-family: 'Roboto', 'sans-serif'
     font-weight: 700
     text-decoration: none
 
