--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -9,6 +9,7 @@
 
 @import 'typography'
 @import 'keyframes'
+@import 'mixins'
 @import 'container'
 @import 'navbar'
 @import 'social'
@@ -17,5 +18,7 @@
 @import 'card'
 @import 'tags'
 @import 'media'
+@import 'input'
 
 @import 'frontpage'
+@import 'page-contact'
