--- a/src/css/_font-awesome.sass
+++ b/src/css/_font-awesome.sass
@@ -1,5 +1,6 @@
 @import '../../node_modules/@fortawesome/fontawesome-free/scss/solid'
 @import '../../node_modules/@fortawesome/fontawesome-free/scss/brands'
+@import '../../node_modules/@fortawesome/fontawesome-free/scss/regular'
 @import '../../node_modules/@fortawesome/fontawesome-free/scss/variables'
 @import '../../node_modules/@fortawesome/fontawesome-free/scss/mixins'
 @import '../../node_modules/@fortawesome/fontawesome-free/scss/core'
