--- a/src/css/_keyframes.sass
+++ b/src/css/_keyframes.sass
@@ -35,3 +35,41 @@
     100%
         box-shadow: $box-shadow
         top: 50px
+
+@keyframes rotation
+    0%
+        transform: rotate(0deg)
+
+    100%
+        transform: rotate(360deg)
+
+@keyframes processing-start
+    0%
+        bottom: 0
+        left: 0
+        right: 0
+        top: 0
+        width: 100%
+
+    100%
+        bottom: 10px
+        left: calc(50% - 25px)
+        right: calc(50% - 25px)
+        top: 10px
+        width: 50px
+
+@keyframes processing-end
+
+    0%
+        bottom: 10px
+        left: calc(50% - 25px)
+        right: calc(50% - 25px)
+        top: 10px
+        width: 50px
+
+    100%
+        bottom: 0
+        left: 0
+        right: 0
+        top: 0
+        width: 100%
