--- a/src/css/_footer.sass
+++ b/src/css/_footer.sass
@@ -7,10 +7,9 @@
     text-align: center
 
     .brand,
-    .contact,
-    .social
-        opacity: .7
+    .contact
         margin-bottom: 2 * $spacer
+        opacity: .7
 
     .footer-logo
         margin-bottom: 2 * $spacer
