--- a/src/css/_variables.sass
+++ b/src/css/_variables.sass
@@ -5,7 +5,7 @@
 
 // // Color system
 
-$white:    #fff !default
+$white:    #fff
 // $gray-100: #f8f9fa !default
 // $gray-200: #e9ecef !default
 // $gray-300: #dee2e6 !default
@@ -34,7 +34,7 @@ $black:    #292b2c
 //   $grays
 // )
 
-$blue:    #1e88ae
+$blue:    #336397
 // $indigo:  #6610f2 !default
 // $purple:  #6f42c1 !default
 // $pink:    #e83e8c !default
@@ -1133,7 +1133,7 @@ $mail: rgba(68, 68, 68, 1)
 $whatsapp: rgba(0, 150, 136, 1)
 
 // Profiles array
-$social-profiles: ('facebook': $facebook, 'instagram': $instagram, 'twitter': $twitter, 'google-plus': $google-plus, 'behance': $behance, 'linkedin': $linkedin, 'pinterest': $pinterest, 'reddit': $reddit, 'github': $github, 'mail': $mail, 'whatsapp': $whatsapp)
+$social-profiles: ('facebook-f': $facebook, 'instagram': $instagram, 'twitter': $twitter, 'google-plus': $google-plus, 'behance': $behance, 'linkedin-in': $linkedin, 'pinterest': $pinterest, 'reddit-alien': $reddit, 'github': $github, 'mail': $mail, 'whatsapp': $whatsapp)
 // $social-profiles: ('facebook': $facebook, 'instagram': $instagram, 'twitter': $twitter, 'behance': $behance, 'linkedin': $linkedin, 'github': $github)
 
 // Menu toggle border
