--- a/src/css/_header.sass
+++ b/src/css/_header.sass
@@ -7,6 +7,6 @@
     position: relative
 
 .custom-logo
-    height: auto
-    margin-bottom: 3rem
-    width: 100px
+    height: 100px
+    margin-bottom: 2rem
+    width: auto
