--- a/src/css/_page-contact.sass
+++ b/src/css/_page-contact.sass
@@ -10,6 +10,7 @@
 
         [class*=' fa-']
             color: $black
+            min-width: 2.5 * $spacer
 
         .link
             font-size: 1.125 * $font-size-base
