--- a/src/css/_header.sass
+++ b/src/css/_header.sass
@@ -4,9 +4,15 @@
     display: flex
     flex-direction: column
     justify-content: center
+    padding-top: 100px
     position: relative
+    width: 100%
 
 .custom-logo
     height: 100px
     margin-bottom: 2rem
     width: auto
+
+@include media-breakpoint-up(md)
+    .header-overlay
+        padding-top: 0
